updated html and added styling

--- a/John.html
+++ b/John.html
@@ -2,17 +2,24 @@
 <html>
     <head>
         <meta charset="UTF-8">  
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="styles.css"> 
 
         
         <title>Group 7</title>
     </head>
-
+    <div class="container">
     <body>
         <h1>hello my name is John Alban </h1>
 
-        <p> This is where I'll put an actual description when I stop being lazy</p>
+        <img src="images/JohnAlban_headshot.jpg" alt="picture of John">
+
+        <p> I'm a 23 year old computer science major at Lehman College. My main <br>
+            hobby is playing video games, but I also enjoy reading books and <br>
+            watching movies. </p>
+        
 
 
     </body>
+</div>
 </html>
