--- a/Arslan.html
+++ b/Arslan.html
@@ -3,14 +3,13 @@
     <head>
         <meta charset="UTF-8">  
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        
+        <link rel="stylesheet" href="styles.css">
         <title>Arslan</title>
     </head>
 
     <body>
         <h1> Hello my name is Arslan Muhammad</h1>
-        <img src="/images/picture of me.JPG" alt="A picture of myself"
-        width= "300" height = "333">
+        <img src="/images/picture of me.JPG" alt="A picture of myself">
         <p> I am currenlty 21 years old and in my senior year of college. Some of my hobbies of mine is that I love to go to the gym and workout as well as play basketball. As for basketball my favorite player is Lebron James as growing up I watched him play and he is the goat. </p>
         <ul>
             <li>Java</li>
