--- a/Redwan.html
+++ b/Redwan.html
@@ -1,8 +1,8 @@
-+ < ! DOCTYPE Html>
-+ <html>
-+     <head>
-+          <meta charset="UTF-8">
-+          <meta name="viewport" content="device-width, initial-scale=1.0">
+ < ! DOCTYPE Html>
+ <html>
+     <head>
+          <meta charset="UTF-8">
+          <meta name="viewport" content="device-width, initial-scale=1.0">
 
 
 <title>Group 7</title>
