--- a/John.html
+++ b/John.html
@@ -19,6 +19,17 @@
             watching movies. </p>
         
 
+        <br>
+
+        <h1> Here are some of the languages I'm familiar with:</h1>
+
+        <ul>
+            <li>Java</li>
+            <li>Python</li>
+            <li>Javascript</li>
+            <li>C++</li>
+          </ul>
+    </body>
 
     </body>
 </div>
