Added my html file

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ for now just copy and paste the ones I have, they're the default minimum you nee
         <a href="John.html"> John Alban </a>  <!-- this "a" tag is what you'll use to link to other pages, you can read more about it in the documentation
         under "HTML <a> Tag"-->
         <a href="Arslan.html"> Arslan Muhammad </a> 
+        <a href="eralda.html"> Eralda Gjuta </a> 
     </body>
 
 
