--- a/eralda.html
+++ b/eralda.html
@@ -12,7 +12,7 @@
 
     <body>
         <h1>Hello, I am Eralda  </h1>
-        <img src="eralda.JPG" alt="Eralda"
+        <img src="images/eralda.JPG" alt="Eralda"
         width="300" height="333">
         
 
