--- a/Arslan.html
+++ b/Arslan.html
@@ -9,7 +9,7 @@
 
     <body>
         <h1 class="intro"> Hello my name is Arslan Muhammad</h1>
-        <img src="/images/picture of me.JPG" alt="A picture of myself">
+        <img src="images/picture of me.JPG" alt="A picture of myself">
         <p> I am currenlty 21 years old and in my senior year of college. Some of my hobbies of mine is that I love to go to the gym and workout as well as play basketball. As for basketball my favorite player is Lebron James as growing up I watched him play and he is the goat. </p>
         <ul>
             <li>Java</li>
