--- a/Redwan.html
+++ b/Redwan.html
@@ -9,8 +9,8 @@
    </head>
    
    <body>
-        <h1>hello my name is Kazi Redwan</h1>
-        
+        <h1>Hello my name is Kazi Redwan</h1>
+        <img src="images/IMG_0687.JPG" alt="picture of Redwan">
         <p> Skills & Abilities:
           G Suite (Gmail and Google Docs)
           Microsoft Office (Word, Excel, PowerPoint)
