--- a/Janet.html
+++ b/Janet.html
@@ -10,7 +10,7 @@
 
     <body>
         <h1>Janet Victoria</h1>
-        <img src="Images/Janet's image.jpg">
+        <img src="images/Janet's image.jpg">
         <p>I am a undergraduate senior at Lehman College. My major is Computer Science 
            and my minor is mathematics. I like to listen to music and watch anime.
            I'm currently learning SQL and continuing in learning Python.
